add show backlink function to back link component

--- a/src/app/shared/components/back-link/back-link.component.html
+++ b/src/app/shared/components/back-link/back-link.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="back">
+<ng-container *ngIf="back || showBackLink">
   <!-- <a [routerLink]="back.url" [queryParams]="back.queryParams" [fragment]="back.fragment" class="govuk-back-link">Back</a> -->
   <a href="#" (click)="goBack($event)" class="govuk-back-link">Back</a>
 </ng-container>
