--- a/src/app/shared/directives/create-workplace/is-this-your-workplace/is-this-your-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/is-this-your-workplace/is-this-your-workplace.component.html
@@ -6,7 +6,10 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <span class="govuk-caption-l">Workplace</span>
-          <h1 *ngIf="isParent" class="govuk-fieldset__heading">Is this the workplace you want to add?</h1>
+          <h1 *ngIf="isParent" class="govuk-fieldset__heading">
+            Is this the workplace you want <br />
+            to add?
+          </h1>
           <h1 *ngIf="!isParent" class="govuk-fieldset__heading">Is this your workplace?</h1>
         </legend>
         <div *ngIf="locationData">
@@ -63,16 +66,16 @@
             </div>
           </div>
         </div>
-        <div class="govuk-!-margin-top-8">
+        <div class="govuk-!-margin-top-6">
           <app-details [title]="revealTitle">
             <p>
-              Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> or email
+              Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> or <br />email
               <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
             </p>
           </app-details>
         </div>
       </fieldset>
-      <button class="govuk-button govuk-!-margin-top-5" type="submit">Continue</button>
+      <button class="govuk-button govuk-!-margin-top-3" type="submit">Continue</button>
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
