--- a/src/app/features/dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/dashboard/home-tab/home-tab.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row govuk-!-margin-top-3">
   <div class="govuk-grid-column-two-thirds">
-    <ng-container *ngIf="workplace && !recruitmentJourneyExistingUserBanner">
+    <ng-container *ngIf="workplace && !recruitmentJourneyExistingUserBanner && !addWorkplaceDetailsBanner">
       <app-inset-text *ngIf="workplace.employerType" [color]="'todo'" class="govuk-!-margin-bottom-2">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
