add workplace name address routing to confirm details in registration flow, add progress bars to component

--- a/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
@@ -8,9 +8,9 @@
           <span class="govuk-caption-l">Workplace</span>
           <h1 *ngIf="isParent" class="govuk-fieldset__heading">
             Select the workplace you want<br />
-            to add?
+            to add
           </h1>
-          <h1 *ngIf="!isParent" class="govuk-fieldset__heading">Is this your workplace?</h1>
+          <h1 *ngIf="!isParent" class="govuk-fieldset__heading">Select your workplace</h1>
         </legend>
         <ng-container *ngIf="!isCQCLocationUpdate">
           <div class="govuk-!-margin-bottom-5">
