fix(staffRecruitmentSnaggingListV3): Fixed typos on check answers page and workplace tab

--- a/src/app/shared/components/new-workplace-summary/new-workplace-summary.component.html
+++ b/src/app/shared/components/new-workplace-summary/new-workplace-summary.component.html
@@ -476,7 +476,7 @@
     </div>
 
     <div class="govuk-summary-list__row" data-testid="leavers">
-      <dt class="govuk-summary-list__key">Staff leavers</dt>
+      <dt class="govuk-summary-list__key">Leavers</dt>
       <dd class="govuk-summary-list__value">
         <app-summary-record-value
           [wdfView]="wdfView"
@@ -517,7 +517,7 @@
               !workplace.wdf?.leavers.updatedSinceEffectiveDate
             )
           "
-          [explanationText]="' staff leavers'"
+          [explanationText]="' leavers'"
           [link]="['/workplace', workplace.uid, 'leavers']"
           [hasData]="workplace.leavers?.length"
           (setReturnClicked)="this.setReturn()"
