--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -7,7 +7,7 @@
       </h1>
 
       <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
-        <p>Check the workplace details before you confirm them.</p>
+        <p>Check these details before you confirm them.</p>
         <button class="govuk-button" type="button" (click)="showConfirmWorkplaceDetailsAlert()">
           Confirm workplace details
         </button>
