--- a/src/app/features/create-account/workplace/regulated-by-cqc/regulated-by-cqc.component.html
+++ b/src/app/features/create-account/workplace/regulated-by-cqc/regulated-by-cqc.component.html
@@ -5,6 +5,7 @@
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l">Workplace</span>
           <h1 class="govuk-fieldset__heading">
             Is the main service you provide regulated by the Care Quality Commission?
           </h1>
@@ -50,7 +51,7 @@
         </div>
       </fieldset>
 
-      <button class="govuk-button" type="submit">Continue</button>
+      <button class="govuk-button govuk-!-margin-top-4" type="submit">Continue</button>
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
