change the progress bar to accept confirm workplacea as active field

--- a/src/app/shared/directives/create-workplace/workplace-name-address/workplace-name-address.component.html
+++ b/src/app/shared/directives/create-workplace/workplace-name-address/workplace-name-address.component.html
@@ -49,14 +49,14 @@
         data-testid="progress-bar-1"
         [header]="'Workplace'"
         [sections]="workplaceSections"
-        [currentSection]="'Find workplace'"
+        [currentSection]="'Confirm workplace'"
       ></app-progress-bar>
       <app-progress-bar
         *ngIf="this.flow.includes('registration')"
         data-testid="progress-bar-2"
         [header]="'User account'"
         [sections]="userAccountSections"
-        [currentSection]="'Find workplace'"
+        [currentSection]="'Confirm workplace'"
       ></app-progress-bar>
     </div>
   </div>
