--- a/src/app/shared/components/workplace-tab/workplace-tab.component.html
+++ b/src/app/shared/components/workplace-tab/workplace-tab.component.html
@@ -38,6 +38,6 @@
       Start to add more details about your workplace
     </a>
   </app-inset-text>
-  <app-new-workplace-summary [workplace]="workplace" [workerCount]="workerCount" [return]="summaryReturnUrl">
-  </app-new-workplace-summary>
+  <app-workplace-summary [workplace]="workplace" [workerCount]="workerCount" [return]="summaryReturnUrl">
+  </app-workplace-summary>
 </ng-container>
