--- a/src/app/shared/directives/create-workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/shared/directives/create-workplace/type-of-employer/type-of-employer.component.html
@@ -4,7 +4,7 @@
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-8">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-7">
           <span class="govuk-caption-l">Workplace</span>
           <h1 class="govuk-fieldset__heading">{{ question }}</h1>
         </legend>
@@ -58,7 +58,16 @@
           </div>
         </div>
       </fieldset>
-      <button class="govuk-button govuk-!-margin-top-4" type="submit">Continue</button>
+      <div class="govuk-button-group">
+        <ng-container *ngIf="insideFlow; else outsideFlow">
+          <button class="govuk-button" type="submit">Continue</button>
+        </ng-container>
+        <ng-template #outsideFlow>
+          <button class="govuk-button govuk-!-margin-right-9" type="submit">Save and return</button>
+          <span class="govuk-visually-hidden">or</span>
+          <a href="#" class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onClick($event)">Exit</a>
+        </ng-template>
+      </div>
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
