--- a/src/app/features/workplace/workplace-info-panel/workplace-info-panel.component.html
+++ b/src/app/features/workplace/workplace-info-panel/workplace-info-panel.component.html
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-one-third">
     <p>
       <ng-container *ngIf="canViewEstablishment; else noPermission">
-        <a [routerLink]="['/workplace', workplace.uid]">
+        <a href="#" (click)="setEmployerType($event)">
           {{ workplace.name }}
         </a>
       </ng-container>
