--- a/src/app/shared/components/registration-submit-buttons/registration-submit-buttons.component.html
+++ b/src/app/shared/components/registration-submit-buttons/registration-submit-buttons.component.html
@@ -5,6 +5,6 @@
   <ng-template #outsideFlow>
     <button class="govuk-button govuk-!-margin-right-9" type="submit">Save and return</button>
     <span class="govuk-visually-hidden">or</span>
-    <a class="govuk-button govuk-button--link govuk-!-margin-left-9" routerLink="/{{ returnRoute }}">Exit</a>
+    <a class="govuk-button govuk-button--link govuk-!-margin-left-9" routerLink="/{{ returnRoute }}">Cancel</a>
   </ng-template>
 </div>
