add the flow changes

--- a/src/app/shared/directives/create-workplace/workplace-name-address/workplace-name-address.component.html
+++ b/src/app/shared/directives/create-workplace/workplace-name-address/workplace-name-address.component.html
@@ -43,7 +43,7 @@
       </div>
     </form>
   </div>
-  <div class="govuk-grid-column-one-third">
+  <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
     <div class="govuk-util__float-right">
       <app-progress-bar
         data-testid="progress-bar-1"
