--- a/src/app/shared/directives/create-workplace/could-not-find-workplace-address/could-not-find-workplace-address.component.html
+++ b/src/app/shared/directives/create-workplace/could-not-find-workplace-address/could-not-find-workplace-address.component.html
@@ -5,6 +5,7 @@
     <form #formEl novalidate [formGroup]="form" (ngSubmit)="onSubmit()">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l">Workplace</span>
           <h1 class="govuk-fieldset__heading">We could not find {{ isParent ? 'the' : 'your' }} workplace address</h1>
         </legend>
         <p>
