--- a/src/app/shared/directives/create-workplace/name-of-workplace/name-of-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/name-of-workplace/name-of-workplace.component.html
@@ -38,4 +38,21 @@
       <button class="govuk-button" type="submit">Continue</button>
     </form>
   </div>
+  <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+    <div class="govuk-util__float-right">
+      <app-progress-bar
+        data-testid="progress-bar-1"
+        [header]="'Workplace'"
+        [sections]="workplaceSections"
+        [currentSection]="'Confirm workplace'"
+      ></app-progress-bar>
+      <app-progress-bar
+        *ngIf="this.flow.includes('registration')"
+        data-testid="progress-bar-2"
+        [header]="'User account'"
+        [sections]="userAccountSections"
+        [currentSection]="'Confirm workplace'"
+      ></app-progress-bar>
+    </div>
+  </div>
 </div>
