change link text for manually adding workplace and fix failing tests

--- a/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
@@ -58,7 +58,7 @@
       <ng-template #CQCLocationAdd>
         <p class="govuk-!-margin-bottom-7 govuk-!-margin-top-2">
           <a routerLink="/{{ flow }}/workplace-name-address" role="button" draggable="false">
-            Workplace is not displayed or is not correct
+            Enter workplace details manually if they're not displayed or not correct
           </a>
         </p>
         <app-registration-submit-buttons
