--- a/src/app/shared/directives/create-workplace/name-of-workplace/name-of-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/name-of-workplace/name-of-workplace.component.html
@@ -11,6 +11,7 @@
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l">Workplace</span>
           <h1 *ngIf="isParent" class="govuk-fieldset__heading">What's the name of the workplace?</h1>
           <h1 *ngIf="!isParent" class="govuk-fieldset__heading">What's the name of your workplace?</h1>
         </legend>
@@ -35,7 +36,7 @@
           />
         </div>
       </fieldset>
-      <button class="govuk-button" type="submit">Continue</button>
+      <button class="govuk-button govuk-!-margin-top-3" type="submit">Continue</button>
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
