add init function to the select workplace address components in both flows

--- a/src/app/shared/directives/create-workplace/select-workplace-address/select-workplace-address.component.html
+++ b/src/app/shared/directives/create-workplace/select-workplace-address/select-workplace-address.component.html
@@ -5,7 +5,8 @@
     <form #formEl novalidate [formGroup]="form" (ngSubmit)="onSubmit()">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-fieldset__heading">{{ title }}</h1>
+          <h1 *ngIf="isParent" class="govuk-fieldset__heading">Select the workplace address</h1>
+          <h1 *ngIf="!isParent" class="govuk-fieldset__heading">Select your workplace address</h1>
         </legend>
 
         <div class="govuk-!-margin-bottom-5">
@@ -25,9 +26,9 @@
           <select
             class="govuk-select"
             [class.govuk-select--error]="submitted && getAddress.errors"
-            [formControlName]="'address'"
-            id="address"
-            name="address"
+            [formControlName]="'workplace'"
+            id="workplace"
+            name="workplace"
             (change)="onLocationChange($event.target.value)"
           >
             <option [value]="''" selected disabled>{{ locationAddresses.length }} addresses found</option>
