--- a/src/app/shared/components/select-workplace-dropdown-form/select-workplace-dropdown-form.component.html
+++ b/src/app/shared/components/select-workplace-dropdown-form/select-workplace-dropdown-form.component.html
@@ -8,7 +8,7 @@
     (change)="onLocationChange($event.target.value)"
   >
     <option [value]="''" selected disabled>{{ locationAddresses.length }} addresses found</option>
-    <option *ngFor="let location of locationAddresses; let i = index" [value]="location.locationId">
+    <option *ngFor="let location of locationAddresses; let i = index" [value]="i">
       {{ getLocationName(location) }}
     </option>
   </select>
