add the routing for the tailored seminars

--- a/src/app/features/benefits-bundle/benefits-bundle.component.html
+++ b/src/app/features/benefits-bundle/benefits-bundle.component.html
@@ -61,12 +61,7 @@
           delivered directly to your organisation. Claim 10% off with your ASC-WDS workplace ID.
         </p>
         <p>
-          <a
-            href="https://www.skillsforcare.org.uk/Recruitment-retention/Values-based-recruitment-and-retention/Values-based-interviewing-seminar.aspx"
-            target="_blank"
-            >Read more about values-based interviewing</a
-          >
-          on the Skills for Care website.
+          <a [routerLink]="['tailored-seminars']">Read more about the Tailored seminars</a>
         </p>
       </app-benefit-accordion>
 
