make changes to the radio buttons to format the text shown, and change prefill in select workplace address component

--- a/src/app/shared/components/select-workplace-radio-button-form/select-workplace-radio-button-form.component.html
+++ b/src/app/shared/components/select-workplace-radio-button-form/select-workplace-radio-button-form.component.html
@@ -9,7 +9,9 @@
       [formControlName]="'workplace'"
     />
     <label class="govuk-label govuk-radios__label" for="workplace-{{ i }}">
-      {{ item.locationName }}, {{ item.townCity }}, {{ item.postalCode }}
+      {{ item.locationName ? (item.locationName | titlecase) : (item.addressLine1 | titlecase) }},
+      {{ item.townCity | titlecase }},
+      {{ item.postalCode }}
     </label>
   </div>
 </div>
