add workplace title to select workplace address component

--- a/src/app/shared/directives/create-workplace/select-workplace-address/select-workplace-address.component.html
+++ b/src/app/shared/directives/create-workplace/select-workplace-address/select-workplace-address.component.html
@@ -5,6 +5,7 @@
     <form #formEl novalidate [formGroup]="form" (ngSubmit)="onSubmit()">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l">Workplace</span>
           <h1 class="govuk-fieldset__heading">{{ title }}</h1>
         </legend>
 
