--- a/src/app/features/create-account/user/your-details/your-details.component.html
+++ b/src/app/features/create-account/user/your-details/your-details.component.html
@@ -11,6 +11,7 @@
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l">User account</span>
           <h1 class="govuk-fieldset__heading">Add your user details</h1>
         </legend>
 
@@ -49,5 +50,22 @@
 
       <button class="govuk-button govuk-!-margin-top-2" type="submit">{{ callToActionLabel }}</button>
     </form>
+  </div>
+  <div class="govuk-grid-column-one-third">
+    <div class="govuk-util__float-right">
+      <app-progress-bar
+        data-testid="progress-bar-1"
+        [header]="'Workplace'"
+        [sections]="workplaceSections"
+        [currentSection]="'Confirm workplace'"
+      ></app-progress-bar>
+      <app-progress-bar
+        *ngIf="this.flow.includes('registration')"
+        data-testid="progress-bar-2"
+        [header]="'User account'"
+        [sections]="userAccountSections"
+        [currentSection]="'Confirm workplace'"
+      ></app-progress-bar>
+    </div>
   </div>
 </div>
