make text change and add spacing to the button on the add workplace start page

--- a/src/app/features/add-workplace/start/start.component.html
+++ b/src/app/features/add-workplace/start/start.component.html
@@ -8,11 +8,11 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>their main service and whether it's regulated by the Care Quality Commission (CQC)</li>
       <li>the name and address of the workplace</li>
-      <li>what type of employer they are (for example local authority, private)</li>
+      <li>what type of employer they are (for example, local authority, private)</li>
       <li>how many members of staff the workplace has</li>
     </ul>
 
-    <div class="govuk-button-group">
+    <div class="govuk-button-group govuk-!-margin-top-8">
       <a [routerLink]="['/add-workplace', 'regulated-by-cqc']" role="button" draggable="false" class="govuk-button">
         Continue
       </a>
