change header text remove some margin from the buttons

--- a/src/app/features/create-account/user/create-security-question/create-security-question.component.html
+++ b/src/app/features/create-account/user/create-security-question/create-security-question.component.html
@@ -5,7 +5,7 @@
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <span class="govuk-caption-l">Workplace</span>
+          <span class="govuk-caption-l">User account</span>
           <h1 class="govuk-fieldset__heading">Create and answer your security question</h1>
         </legend>
 
