--- a/src/app/shared/components/registration-submit-buttons/registration-submit-buttons.component.html
+++ b/src/app/shared/components/registration-submit-buttons/registration-submit-buttons.component.html
@@ -1,4 +1,4 @@
-<div class="govuk-button-group">
+<div class="govuk-button-group govuk-!-margin-top-4">
   <ng-container *ngIf="insideFlow; else outsideFlow">
     <button class="govuk-button" type="submit">Continue</button>
   </ng-container>
