Add the save and return and cancel button for the outside the flow and add test

--- a/src/app/features/create-account/user/your-details/your-details.component.html
+++ b/src/app/features/create-account/user/your-details/your-details.component.html
@@ -47,8 +47,7 @@
           </div>
         </ng-container>
       </fieldset>
-
-      <button class="govuk-button govuk-!-margin-top-2" type="submit">{{ callToActionLabel }}</button>
+      <app-registration-submit-buttons [insideFlow]="insideFlow" [returnRoute]="flow"></app-registration-submit-buttons>
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
