--- a/src/app/features/create-account/user/username-password/username-password.component.html
+++ b/src/app/features/create-account/user/username-password/username-password.component.html
@@ -11,6 +11,7 @@
     <form #formEl novalidate (ngSubmit)="checkUsernameDoesntExist()" [formGroup]="form" id="server-error">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l">User account</span>
           <h1 class="govuk-fieldset__heading">Create your username and password</h1>
         </legend>
 
@@ -94,5 +95,21 @@
 
       <button type="submit" class="govuk-button">Continue</button>
     </form>
+  </div>
+  <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+    <div class="govuk-util__float-right">
+      <app-progress-bar
+        data-testid="progress-bar-1"
+        [header]="'Workplace'"
+        [sections]="workplaceSections"
+        [completeProgressBar]="true"
+      ></app-progress-bar>
+      <app-progress-bar
+        data-testid="progress-bar-2"
+        [header]="'User account'"
+        [sections]="userAccountSections"
+        [currentSection]="'Username and password'"
+      ></app-progress-bar>
+    </div>
   </div>
 </div>
