--- a/src/app/features/create-account/workplace/thank-you/thank-you.component.html
+++ b/src/app/features/create-account/workplace/thank-you/thank-you.component.html
@@ -1,14 +1,14 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <div class="govuk-panel govuk-panel--confirmation govuk-util__align-left">
-      <h6 class="govuk-panel__title govuk-!-font-size-36">Thank you</h6>
+    <div class="govuk-panel govuk-panel--confirmation govuk-util__align-left govuk-!-padding-6">
+      <h6 class="govuk-panel__title govuk-!-font-size-36 govuk-!-margin-bottom-2">Thank you</h6>
       <span class="govuk-panel__body govuk-!-font-size-19">Your account is now being checked by Skills for Care</span>
     </div>
     <h2 class="govuk-!-margin-top-7">What happens next?</h2>
     <p>Skills for Care will check your account details and contact you by email or telephone as soon as possible.</p>
     <p>You will not be able to sign into your account until Skills for Care validate it.</p>
 
-    <app-details [title]="'Contact us if you have any questions.'">
+    <app-details [title]="'Contact us if you have any questions'">
       <p>
         Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> or email
         <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
